# Baxter2017

./: .gitignore  Flowchart_baxter.xml  README.md  notes.txt  setup.txt
ai/: package.xml
ai_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
ai_test/src/: ai_test.cpp
baxter_gui/: CMakeLists.txt  mainpage.dox  package.xml
baxter_gui/include/baxter_gui/: main_window.hpp  qnode.hpp
baxter_gui/src/: baxter_gui.cpp  baxter_gui.cpp.autosave  baxter_gui.h  baxter_gui.ui  main.cpp  main_window.cpp  qnode.cpp
baxter_gui/ui/: main_window.ui
board_detector/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  package.xml
board_detector/src/: board_detector.cpp
board_tracker/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
board_tracker/launch/: ar-code-tracker.launch~  qr-code-tracker (copy).launch~  qr-code-tracker.launch  qr-code-tracker.launch~  tf-tree.launch  tf-tree.launch~  usb_cam.launch  usb_cam.launch~
board_tracker/src/: board_tracker.cpp  board_tracker.cpp~
brain_structure/ai/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
brain_structure/ai/src/: ai.cpp
brain_structure/camera/: CMakeLists.txt  CMakeLists.txt~  package.xml
brain_structure/camera/action/: camera_game_master.action
brain_structure/camera/launch/: camera.launch  camera.launch~  game_prep.launch~  webcam.launch  webcam.launch~
brain_structure/camera/src/: board_cutout.cpp  camera.cpp
brain_structure/game_master/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
brain_structure/game_master/action/: ai_game_master.action  ai_game_master.action~  camera_game_master.action  camera_game_master.action~  grasping_baxter_game_master.action~  gui_game_master.action  gui_game_master.action~  watch_dog_game_master.action~
brain_structure/game_master/include/game_master/: game_manager.h
brain_structure/game_master/launch/: Baxter_moveit.launch  Baxter_moveit.launch~  Baxter_moveit_manuel.launch  Baxter_moveit_no_kinect.launch  Baxter_moveit_ttt.launch~  Baxter_real.launch~  Baxter_sim.launch  Baxter_sim.launch~  baxter_TTT.rviz  baxter_moveit_ttt.launch  demo.perspective  game_prep.launch  game_prep.launch~  kinect_prep.launch  kinect_prep.launch~
brain_structure/game_master/src/: game_master.cpp  gui_game_master_server.cpp
brain_structure/grasping_baxter/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
brain_structure/grasping_baxter/action/: grasping_baxter_game_master.action  grasping_baxter_game_master.action~
brain_structure/grasping_baxter/bundles/: ttt8and9.xml  ttt8and9.xml~
brain_structure/grasping_baxter/launch/: ar-code-tracker.launch  ar-code-tracker.launch~  grasping.launch  tf-tree.launch  tf-tree.launch~
brain_structure/grasping_baxter/src/: grasping_baxter.cpp
brain_structure/gui/: CMakeLists.txt  CMakeLists.txt~  package.xml~  plugin_description.xml
brain_structure/gui/src/: baxter_panel.cpp  baxter_panel.h  baxter_panel.h~  gui.cpp  gui_game_master_client.cpp
brain_structure/simtrack_gui/: CMakeLists.txt  package.xml  plugin_description.xml
brain_structure/simtrack_gui/src/: simtrack_panel.cpp  simtrack_panel.h
brain_structure/watch_dog/: CMakeLists.txt  CMakeLists.txt~  package.xml
brain_structure/watch_dog/action/: watch_dog_game_master.action~
brain_structure/watch_dog/src/: watch_dog.cpp
build-baxter_gui-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  baxter_gui.cbp  cmake_install.cmake  qrc_images.cxx  ui_main_window.h
build-baxter_gui-Desktop-Default/catkin_generated/: baxter_gui-msg-extras.cmake.develspace.in  baxter_gui-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-baxter_gui-Desktop-Default/catkin_generated/installspace/: baxter_gui-msg-paths.cmake  baxter_gui.pc  baxter_guiConfig.cmake
build-baxter_gui-Desktop-Default/catkin_generated/stamps/baxter_gui/: package.xml.stamp
build-baxter_gui-Desktop-Default/cmake/: baxter_gui-genmsg-context.py  baxter_gui-genmsg.cmake
build-baxter_gui-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-baxter_gui-Desktop-Default/devel/include/baxter_gui/: send_command.h  send_commandRequest.h  send_commandResponse.h
build-baxter_gui-Desktop-Default/devel/lib/baxter_gui/: baxter_gui
build-baxter_gui-Desktop-Default/devel/lib/pkgconfig/: baxter_gui.pc
build-baxter_gui-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-baxter_gui-Desktop-Default/include/baxter_gui/: moc_main_window.cxx  moc_main_window.cxx_parameters  moc_qnode.cxx  moc_qnode.cxx_parameters
camera/: CMakeLists.txt
camera/launch/: camera.launch  webcam.launch
camera/src/: board_cutout.cpp  camera.cpp
game_master/: CMakeLists.txt  CMakeLists.txt~  package.xml
game_master/action/: camera_game_master.action  game_master_gui.action  gui_game_master.action
game_master/faces/fieldnums/: Untitled Document
game_master/include/game_master/: game_manager.h
game_master/launch/: Baxter_sim.launch  game_prep.launch  hkust_baxter_demo.launch  simtrack.launch
game_master/src/: game_master.cpp
game_master/srv/: send_command.srv
grasping/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
grasping/scripts/: getcoords.py  grasping.py  grasping.py~  grasping2.py
grasping/src/: pickplace.cpp
grasping_baxter/: CMakeLists.txt
grasping_baxter/bundles/: ttt4markers.xml
grasping_baxter/launch/: ar-code-tracker.launch  grasping.launch  tf-tree.launch
grasping_baxter/src/: grasping_baxter.cpp
gui/: CMakeLists.txt  package.xml
gui/src/: baxter_panel.h
others/: .~lock.gameboard_paper.odt#  base_kinect_tf.txt  baxter_moveit_sensor_manager.launch  gameboard_paper.odt  gameboard_paper_new.odt  sensor_manager.launch  time.cpp
others/008065264947/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
others/Boxes/: Baxterbox.stl  human_box.stl
others/smal/008065264947/: calib_pose.yaml
simtrack_gui/: CMakeLists.txt
simtrack_gui/src/: simtrack_panel.cpp
(+7 files in other folders)
